Alright pretty good and set up
Former-commit-id: bc8f1575404c0a6b9757474d2e1a6594a417a989

--- a/app/app.html
+++ b/app/app.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Nexus Interface</title>
+  <title>T R I T I U M</title>
   <script>
     (function () {
       if (!process.env.HOT) {
