Change wallpaper functionality
Former-commit-id: b60b224521a8c61320e419fb278789df0f3d507f

--- a/app/app.html
+++ b/app/app.html
@@ -42,6 +42,14 @@
           .map(script => '<script defer src="' + script + '"><\/script>')
           .join('')
       );
+
+      var settings = require("./api/settings").GetSettings();
+
+      if (settings.wallpaper) {
+        console.log("Applying custom wallpaper: " + settings.wallpaper);
+        document.body.style.setProperty('--background-main-image', "url('" + settings.wallpaper + "')");
+      }
+
     }
   </script>
 </body>
