Fixed Windows pathing issue and fixed backup issue for windows systems.
Former-commit-id: 6139aed17ce0c63ad4740da13dd90d8aec949a62

--- a/app/app.html
+++ b/app/app.html
@@ -46,8 +46,13 @@
       var settings = require("./api/settings").GetSettings();
 
       if (settings.wallpaper) {
-        console.log("Applying custom wallpaper: " + settings.wallpaper);
-        document.body.style.setProperty('--background-main-image', "url('" + settings.wallpaper + "')");
+        let customBGImageUrl = settings.wallpaper;
+        if ( process.platform === "win32")
+        {
+          customBGImageUrl =  customBGImageUrl.replace(/\\/g, '/');
+        }
+        console.log("Applying custom wallpaper: " + customBGImageUrl);
+        document.body.style.setProperty('--background-main-image', "url('" + customBGImageUrl + "')");
       }
 
     }
