Updating app name, fixing dom elements errors
Former-commit-id: 094a2206e48dbcef92341146fa5f7838659547dc

--- a/app/app.html
+++ b/app/app.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>T R I T I U M</title>
+  <title>Nexus Tritium Wallet</title>
   <script>
     (function () {
       if (!process.env.HOT) {
