Fixed issue with fixed positioning html code
Former-commit-id: 61ddf6e1087ed9b32ece4bd598c352f9c1a50023

--- a/app/app.html
+++ b/app/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="position: fixed; overflow: hidden;">
+<html>
 
 <head>
   <meta charset="utf-8">
@@ -18,7 +18,7 @@
 
 </head>
 
-<body style="overflow: hidden;">
+<body>
   <div id="root"></div>
   <script>
     {
@@ -46,11 +46,9 @@
 
     }
   </script>
-
-  <div style="position:fixed; overflow:hidden;">
-    <script type="text/javascript" src="https://nexusearth.atlassian.net/s/d41d8cd98f00b204e9800998ecf8427e-T/-dpikij/b/16/a44af77267a987a660377e5c46e0fb64/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector.js?locale=en-US&collectorId=c9a595bb"></script>
-  </div>
+  <script type="text/javascript" src="https://nexusearth.atlassian.net/s/d41d8cd98f00b204e9800998ecf8427e-T/-dpikij/b/16/a44af77267a987a660377e5c46e0fb64/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector.js?locale=en-US&collectorId=c9a595bb"></script>
 </body>
+
 <footer>
   <style>
     a {
