--- a/app/app.html
+++ b/app/app.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div style="overflow: hidden;" id="root"></div>
   <script>
     {
       const scripts = [];
@@ -48,13 +48,5 @@
   </script>
   <script type="text/javascript" src="https://nexusearth.atlassian.net/s/d41d8cd98f00b204e9800998ecf8427e-T/-dpikij/b/16/a44af77267a987a660377e5c46e0fb64/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector.js?locale=en-US&collectorId=c9a595bb"></script>
 </body>
-
-<footer>
-  <style>
-    a {
-      overflow: hidden;
-    }
-  </style>
-</footer>
 
 </html>
