--- a/app/app.html
+++ b/app/app.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Nexus Tritium Wallet Beta</title>
+    <title>Nexus</title>
     <script>
       ;(function() {
         if (!process.env.HOT) {
