preload dev build moved to webpack-dev-server
Former-commit-id: a0afe59a3826d80cfe1952857c848c4e8e942165

--- a/src/app.html
+++ b/src/app.html
@@ -32,7 +32,7 @@
         const port = process.env.PORT || 1212;
         scripts.push(
           process.env.HOT
-            ? 'http://localhost:' + port + '/dist/renderer.dev.js'
+            ? 'http://localhost:' + port + '/renderer.dev.js'
             : './renderer.prod.js'
         );
 
