--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
     <title>Nexus</title>
     <script>
       (function() {
-        if (!process.env.HOT) {
+        if (process.env.NODE_ENV !== 'development') {
           const link = document.createElement('link');
           link.rel = 'stylesheet';
           link.href = './style.css';
@@ -31,7 +31,7 @@
         // Dynamically insert the bundled app script in the renderer process
         const port = process.env.PORT || 1212;
         scripts.push(
-          process.env.HOT
+          process.env.NODE_ENV === 'development'
             ? 'http://localhost:' + port + '/renderer.dev.js'
             : './renderer.prod.js'
         );
@@ -42,17 +42,12 @@
             .join('')
         );
 
-        const { shell } = require('electron');
-
-        function handleNonLeftClick(e) {
-          if (e.button === 1 || e.ctrlKey) {
-            e.preventDefault();
-          }
-        }
-
         window.onload = () => {
-          document.addEventListener('auxclick', handleNonLeftClick);
-          document.addEventListener('click', handleNonLeftClick);
+          document.addEventListener('auxclick', function handleNonLeftClick(e) {
+            if (e.button === 1 || e.ctrlKey) {
+              e.preventDefault();
+            }
+          });
         };
       }
     </script>
